objects/vlocity_cmt__AdminTabLayout__c.object
<CustomObject>
    <description>DEPRECATED. Use Vlocity Object Layouts.</description>
    <fields>
        <fullName>vlocity_cmt__IconId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Icon to be used by the tab</description>
        <label>Icon</label>
        <referenceTo>vlocity_cmt__VlocityAttachment__c</referenceTo>
        <relationshipLabel>Admin Tab Layouts</relationshipLabel>
        <relationshipName>AdminTabLayouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IframeSrc__c</fullName>
        <label>IframeSrc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Admin Tab Layout</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>vlocity_cmt__Sequence__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_cmt__IframeSrc__c</columns>
        <columns>vlocity_cmt__ObjectName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Admin Tab Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admin Tab Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>